keyclock/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: keycloak-ingress
  namespace: keycloak
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - "${your_keycloak_domain}"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        # certificate secret must be in the same namespace of istio-ingress
        credentialName: "${your_certificate_secret}"
        minProtocolVersion: TLSV1_3  # depends on certificate and service
        mode: SIMPLE
